# Halligame

./: .$HalligameTopology.drawio.bkp  .gitignore  .gitmodules  HalligameTopology.drawio  Makefile  README.md  commands_to_run  devenv.nix  elvis.config  gameServer.erl  pyproject.toml
cli/: clientServerTest.erl  handleCLIRequest.erl  hg.activate  hg.bash
doc_template/: module.html.jinja2
docs/source/: cli.background.rst  cli.cli.rst  cli.rst  conf.py  halligame.games.Battleship.rst  halligame.games.Canvas.rst  halligame.games.ExampleGame.rst  halligame.games.TicTacToe.rst  halligame.games.Uno.rst  halligame.games.rst  halligame.rst  halligame.utils.rst  index.rst  modules.rst
games/TicTacToe/: TicTacToe.py
gameserver/: gameServer.erl
registerclient/src/: registerclient.erl
serverbroker/: LICENSE.md
serverbroker/src/: registerclient.erl  serverbroker.app.src  serverbroker.erl
src/: __init__.py  setup.py
src/cli/: LICENSE.md  README.md  __init__.py  activate_dev.csh  activate_dev.sh  background.py  cli.py  csh.activate  handleCLIRequest.erl  hg.activate  hg.activate.sh  hg.bash  hg_background.bash  rebar.config  sh.activate
src/cli/src/: cli.app.src  handleCLIRequest.erl  hg.activate.csh  hg.activate.sh  hg.bash
src/cli/src_old/: hg.bash
src/cli_py/: cli.py
src/communicationServer/: README.md  commserver_output  commserver_output.1  communicationServer.erl  input  misc-michael  run  run_copy
src/communicationServer-old/: communicationServer.erl
src/communicationServer/src/: communicationServer.app.src  communicationServer.erl
src/games/: __init__.py
src/games/TicTacToe/: __init__.py  gameClient.py  gameServer.py
src/halligame/: __init__.py
src/halligame.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/halligame/games/: __init__.py
src/halligame/games/Battleship/: GameClient.py  GameServer.py  __init__.py  gameClient.py  gameServer.py
src/halligame/games/Canvas/: __init__.py  gameClient.py  gameServer.py
src/halligame/games/ExampleGame/: GameClient.py  GameClientTemplate.py  GameServer.py  __init__.py  gameClient.py  gameServer.py
src/halligame/games/TicTacToe/: __init__.py  game.py  gameClient.py  gameServer.py  player.py
src/halligame/games/Uno/: Uno.py  __init__.py  gameClient.py  gameServer.py
src/halligame/utils/: ClientComms.py  ServerComms.py  __init__.py  clientCommunicate.py  common.py  erpyClientCommunicate.py  erpyServerCommunicate.py  gameClientTemplate.py  gameServerTemplate.py  gameState.py  io_test.py  misc.py  screen.py  serverCommunicate.py
src/old_registerclient/src/: registerclient.app.src  registerclient.erl
src/registerclient/: README.md
src/serverbroker/: README.md  elvis.config  rebar.config
src/serverbroker/src/: serverbroker.erl  serverbroker_app.erl  serverbroker_sup.erl
src/user_background/src/: user_background.app.src  user_background.erl
src/utils/: __init__.py  erpyClientCommunicate.py  gameState.py
topology/: ClassDiagrams.drawio  HalligameTopology.drawio
