[project]
name = "halligame"
version = "0.0.3"
description = "A concurrent games system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyrlang",
    "pyrlang-term",
    "psutil>=7.0.0",
    "pyfiglet>=1.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.6",
    "types-psutil>=7.0.0.20250401",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/halligame", "src/cli"]

[tool.uv.sources]
pyrlang-term = { path = "vendor/Term" }
pyrlang = { path = "vendor/Pyrlang" }

[tool.ruff]
line-length = 80
indent-width = 4
exclude = [
    ".git",
    ".mypy_cache",
    ".nox",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "docs",
    "dist",
    "vendor",
]

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "I",   # Import sorting
    "E",   # pycodestyle
    "F",   # Pyflakes
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "ANN0", "ANN2", # flake8-annotations
    "D",   #pydocstyle
    # "DOC", #pydoclint, in preview
]

extend-ignore = [
    "SIM105", # Pushes contextlib.suppress, which I don't care about. --MD
    "D104", # Don't want to need to document __init__.py...
]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = true

[[tool.mypy.overrides]]
module = ["pyrlang.*", "term.*", "pyfiglet.*"]
ignore_missing_imports = true
